--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "useWorkspaces": true,
   "packages": [
-    "@narative/gatsby-theme-novela"
+    "gatsby-theme-operetta"
   ],
   "npmClient": "yarn",
   "command": {
