--- a/www/package.json
+++ b/www/package.json
@@ -9,7 +9,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@narative/gatsby-theme-novela": "^0.17.0",
+    "gatsby-theme-operetta": "^0.17.0",
     "dotenv": "^8.0.0",
     "gatsby": "^2.13.41",
     "gatsby-plugin-google-analytics": "^2.1.6",
